[metadata]
name = plover-onyx-layout
version = 1.0.0
description = Onyx Theory's Layout (modified from TPSteno)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/grahp/plover-onyx-layout
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.1
py_modules =
	onyx_layout

[options.entry_points]
plover.system =
  Onyx = onyx_layout
